--- a/public/index.html
+++ b/public/index.html
@@ -102,7 +102,7 @@
             <!-- User list will be populated here -->
             </div>
             <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
             </div>
         </div>
         </div>
@@ -122,7 +122,7 @@
           Are you sure you want to exit?
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
           <button type="button" class="btn btn-primary" id="confirm-exit">OK</button>
         </div>
       </div>
